# imagen-heap

./: .gitignore  README.md  build.sh  index.html  package-lock.json  package.json  run.sh  vite.config.ts  vitest.config.ts
docs/: plan.md  requirements.md  research.md  status.md
python/: pyproject.toml
python/src/imagen_heap/: __init__.py  main.py
python/src/imagen_heap.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/src/imagen_heap/adapters/: __init__.py  manager.py
python/src/imagen_heap/characters/: __init__.py  manager.py
python/src/imagen_heap/models/: __init__.py  manager.py
python/src/imagen_heap/pipeline/: orchestrator.py
python/src/imagen_heap/providers/: __init__.py  diffusers_provider.py  face_embedding.py  mlx_provider.py
python/src/imagen_heap/rpc/: __init__.py  server.py
python/tests/: test_characters.py  test_faceid.py  test_main.py  test_models.py  test_pipeline.py  test_providers.py  test_rpc.py
scripts/: README.md  generate-from-lora.sh  prepare-dataset.sh  setup-training.sh  setup.sh  train-lora.sh
src/: App.tsx  globals.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/hooks/: useAdapterDownloadProgress.ts  useBackendStatus.ts  useDownloadProgress.ts  useGeneration.ts
src/lib/: constants.ts  logger.ts  promptTemplates.ts  tauri.ts  utils.test.ts  utils.ts
src/stores/: adapters.ts  backend.ts  characters.ts  generation.test.ts  generation.ts  models.ts  promptHistory.ts  ui.ts
src/types/: index.ts  (+3 more)
(+21 files in other folders)
