[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imagen-heap"
version = "0.1.0"
description = "Python inference backend for Imagen Heap"
requires-python = ">=3.11"
dependencies = ["tiktoken>=0.12.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
