[package]
name = "imagen-heap"
version = "0.1.0"
description = "AI Image & Asset Creation App"
authors = ["svanvliet"]
edition = "2021"

[lib]
name = "imagen_heap_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }

